# meowcli-dev

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  docs_improvement.yml
.github/workflows/: ci.yml
src/meow/: __init__.py  cli.py
tests/: test_cli.py
