[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "meowcli"
version = "0.1.0"
description = "A tiny playful CLI that meows with optional emoji."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
meow = "meow.cli:main"
